--- a/.github/workflows/nuxtjs.yml
+++ b/.github/workflows/nuxtjs.yml
@@ -17,6 +17,9 @@ jobs:
       # Pick your own package manager and build script
       - uses: oven-sh/setup-bun@v2
       - run: bun install
+        env:
+          VITE_USER_SECRET: ${{ secrets.VITE_USER_SECRET }}
+          VITE_PASS_SECRET: ${{ secrets.VITE_PASS_SECRET }}
       - run: bun nuxt build --preset github_pages
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
